fix(demo.less): fix collapse no transition

--- a/stories/styles/demo.less
+++ b/stories/styles/demo.less
@@ -1,3 +1,7 @@
+.ReactCollapse--collapse {
+    transition: height 500ms;
+}
+
 .demo-root {
     margin: 0 -16px 40px;
 
